[feat](header): added navbar section with logo & listed links

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
     <title>Agence</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="nav-container">
+        <div class="logo">
+          <img src="./assets/logo/logo.png" alt="" />
+        </div>
+        <div class="menus">
+          <li>home</li>
+          <li>service</li>
+          <li>about</li>
+          <li>home</li>
+        </div>
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
