--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Agence</title>
   </head>
   <body>
+    <!-- Header Section -->
     <header>
+      <!-- NavBar -->
       <div class="nav-container">
         <div class="logo">
           <img src="./assets/logo/logo.png" alt="" />
         </div>
         <div class="menus">
-          <li>home</li>
-          <li>service</li>
-          <li>about</li>
-          <li>home</li>
+          <li>Home</li>
+          <li>Service</li>
+          <li>About</li>
+          <li>Contact</li>
         </div>
       </div>
     </header>
