--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
           <li>Contact</li>
         </div>
       </div>
+      <!-- Banner -->
+      <section class="banner-container">
+        <div>
+          <h1 class="banner-title">
+            <span class="primary">Digital</span> Agency You <br />
+            Can Rely Upon !
+          </h1>
+          <p class="banner-para">
+            Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt,
+            semper metus, nibh adipisci assumenda <br />
+            odio, quos, senectus vehicula occaecat, officiis malesuada cras.
+          </p>
+          <button class="btn-dis">Discover more</button>
+          <button class="btn-hire">Hire us now</button>
+        </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
