--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
           </h1>
           <p class="banner-para">
             Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt,
-            semper metus, nibh adipisci assumenda <br />
-            odio, quos, senectus vehicula occaecat, officiis malesuada cras.
+            semper metus, nibh adipisci assumenda odio, quos, senectus vehicula
+            occaecat, officiis malesuada cras.
           </p>
-          <button class="btn-dis">Discover more</button>
-          <button class="btn-hire">Hire us now</button>
+          <button class="btn btn-primary">Discover more</button>
+          <button class="btn">Hire us now</button>
         </div>
       </section>
     </header>
