[feat](main): added service section with bg image ,info & cards

--- a/index.html
+++ b/index.html
@@ -38,7 +38,65 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <!-- Main Section -->
+    <main>
+      <!-- Service Section -->
+      <section class="service-container">
+        <div class="left-side-container">
+          <button class="service-btn">Service List</button>
+          <h3 class="service-title">
+            <span class="primary">Services</span> We Can Help You With !
+          </h3>
+          <p class="service-para">
+            Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet
+            porro viverra <br />
+            libero habitasse porro fames quos pharetra diam cupidatat ligula!
+            Netus! Quos dignissi <br />
+            mos laoreet.
+          </p>
+          <ol class="service-list">
+            <li>Nobis ridiculus cupiditate egestas commodi.</li>
+            <li>Ipsum dui curabitur dapibuish mollitia.</li>
+          </ol>
+          <div class="author-container">
+            <div class="profile">
+              <img class="author-img" src="./assets/image/author.jpg" alt="" />
+              <div>
+                <p>George Smith</p>
+                <small>CEO, Director</small>
+              </div>
+            </div>
+            <button class="author-btn">More details</button>
+          </div>
+        </div>
+        <div class="right-side-container">
+          <div class="top-service-card">
+            <div class="service-card">
+              <img width="100px" src="./assets/icons/coding.png" alt="" />
+              <h3>Web Development</h3>
+            </div>
+            <div class="service-card">
+              <img width="100px" src="./assets/icons/bar-chart.png" alt="" />
+              <h3>Graphic & Sketch Designing</h3>
+            </div>
+          </div>
+          <div class="bottom-service-card">
+            <div class="service-card">
+              <img width="100px" src="./assets/icons/startup.png" alt="" />
+              <h3>SEO & Content Writing</h3>
+            </div>
+            <div class="service-card">
+              <img
+                width="100px"
+                src="./assets/icons/digital-marketing.png"
+                alt=""
+              />
+              <h3>Digital Market Planning</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
