--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <!-- Service Section -->
       <section class="service-container">
         <div class="left-side-container">
-          <button class="service-btn">Service List</button>
+          <button class="btn service-btn">Service List</button>
           <h3 class="service-title">
             <span class="primary">Services</span> We Can Help You With !
           </h3>
@@ -66,7 +66,7 @@
                 <small>CEO, Director</small>
               </div>
             </div>
-            <button class="author-btn">More details</button>
+            <button class="btn author-btn">More details</button>
           </div>
         </div>
         <div class="right-side-container">
