--- a/index.html
+++ b/index.html
@@ -96,6 +96,22 @@
           </div>
         </div>
       </section>
+      <!-- Appointment Section -->
+      <section class="appointment-container">
+        <div class="phone-call">
+          <img width="80px" src="./assets/icons/phone-call.png" alt="" />
+          <div>
+            <small>GET A FREE CONSULTATION</small>
+            <p>987 233 0000</p>
+          </div>
+        </div>
+        <p class="appointment-para">
+          Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet
+          porro <br />
+          viverra libero habitasse Aut ab nibh aliqua optio veniet porro viverr.
+        </p>
+        <button class="btn apont-btn">Make appointment</button>
+      </section>
     </main>
     <footer></footer>
   </body>
