[feat](main): add blog section
  - add a blog title and description

  - add a card section

  - add different individual card with image and card description

--- a/index.html
+++ b/index.html
@@ -112,6 +112,48 @@
         </p>
         <button class="btn apont-btn">Make appointment</button>
       </section>
+      <!-- Blog Section -->
+      <section class="blog-container">
+        <h1 class="blog-title">
+          <span class="primary">Blog</span> & News From Us!
+        </h1>
+        <p class="blog-para">
+          Sint nascetur facere, delectus conubia consequuntur, nonummy <br />
+          distinctio! Non officiis, id natus non nisl provident justo.
+        </p>
+        <div class="card-container">
+          <div class="blog-card">
+            <img class="card-img" src="./assets/image/blog-1.jpg" alt="" />
+            <h3 class="card-title">
+              Maxime rhoncus aliquet sint eu accusantium illum.
+            </h3>
+            <p class="card-para">
+              Malesuada error laudantium quibusdam, voluptas recusandae,
+              corporis nec, metus numquam, facilis, nascetur?.....
+            </p>
+          </div>
+          <div class="blog-card">
+            <img class="card-img" src="./assets/image/blog-2.jpg" alt="" />
+            <h3 class="card-title">
+              Maxime rhoncus aliquet sint eu accusantium illum.
+            </h3>
+            <p class="card-para">
+              Malesuada error laudantium quibusdam, voluptas recusandae,
+              corporis nec, metus numquam, facilis, nascetur?.....
+            </p>
+          </div>
+          <div class="blog-card">
+            <img class="card-img" src="./assets/image/blog-3.jpg" alt="" />
+            <h3 class="card-title">
+              Maxime rhoncus aliquet sint eu accusantium illum.
+            </h3>
+            <p class="card-para">
+              Malesuada error laudantium quibusdam, voluptas recusandae,
+              corporis nec, metus numquam, facilis, nascetur?.....
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
