--- a/index.html
+++ b/index.html
@@ -155,6 +155,55 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <!-- Footer Section -->
+    <footer>
+      <section class="footer-container">
+        <div>
+          <img width="200px" src="./assets/logo/logo.png" alt="" />
+          <p class="logo-details">
+            Auctor blandit dolorem primis eius odit soluta <br />
+            molestie? Malesuada elementum aut doloremque labo.
+          </p>
+          <div class="icons">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+          </div>
+        </div>
+        <div class="useful-link">
+          <h5 class="footer-heading">Useful Links</h5>
+          <p>About us</p>
+          <p>Careers</p>
+          <p>News & Articles</p>
+          <p>Legal Notice</p>
+        </div>
+        <div class="support">
+          <h5 class="footer-heading">Supports</h5>
+          <p>Help Center</p>
+          <p>Contact Us</p>
+          <p>FAQ</p>
+          <p>Parent Community</p>
+        </div>
+        <div class="contact">
+          <h5 class="footer-heading">Contact Information</h5>
+          <p>Feel free to contact & reach us!!</p>
+          <p>
+            <i class="fa-solid fa-location-dot"></i>3557 Derek Drive, Orlando,
+            Florida
+          </p>
+          <p><i class="fa-solid fa-phone"></i>+1(456)657-887</p>
+          <p><i class="fa-solid fa-envelope"></i>info@domain.com</p>
+        </div>
+      </section>
+      <p class="copy">
+        <small>Copyright &copy; 2024 Agence. All rights reserved.</small>
+      </p>
+    </footer>
+    <!-- Font Awesome Script -->
+    <script
+      src="https://kit.fontawesome.com/061b33f455.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
